<!-- fragment_forgot_password.xml -->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileInformati"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailaddress"
        android:layout_gravity="center_horizontal"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#ffff"
        android:layout_margin="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editTextEmail"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetMessage"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:layout_below="@id/editTextEmail"
        android:layout_margin="16dp" />

></androidx.appcompat.widget.LinearLayoutCompat>
