<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.newProductFragment">

    <ImageView
        android:layout_marginTop="0dp"
        android:id="@+id/product_description_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:transitionName="photoToAnimate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
   />
    <Button
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_description_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_description_Layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/product_details"
            android:textColorHint="#000000"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactNumberList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_description_Layout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ProductcontactNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/availability"
            android:inputType="number"
            android:textColorHint="#000000"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thePriceOfProductLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNumberList">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/thePriceOfProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/money"
            android:inputType="number"
            android:textColorHint="#000000"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/location_Layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/thePriceOfProductLayout">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ProductLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/location"
        android:textColorHint="#000000"
        android:textSize="16sp"/>
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corners_red"
        android:text="@string/submit"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_Layout" />

</androidx.constraintlayout.widget.ConstraintLayout>